<resources>
    <string name="app_name">Pokemon World</string>
    <string name="include_permission_button">Habilitar permissão</string>
    <string name="label_save">Salvar</string>
    <string name="label_first_type">Fire</string>
    <string name="label_second_type">Flying</string>
    <string name="label_speed">Speed</string>
    <string name="label_defense">Defense</string>
    <string name="label_attack">Attack</string>
    <string name="label_sp_defense">Sp.Defense</string>
    <string name="label_sp_attack">Sp.Attack</string>
    <string name="label_hp">HP</string>
    <string name="label_name">Nome:</string>
    <string name="form_title">P O K É D A D O S</string>
    <string name="tab_favorites">Favoritos</string>
    <string name="tab_world">Lista completa</string>
    <string name="bt_Previous">Anterior</string>
    <string name="bt_Next">Próximo</string>
    <string name="what_is_your_email">Qual o seu email?</string>
    <string name="what_is_your_password">Qual vai ser a sua senha?</string>


    <string name="hint_login">Login</string>
    <string name="hint_password">Senha</string>
    <string name="hint_email">E-mail</string>
    <string name="bt_register_password">"Cadastrar Senha"</string>
    <string name="register_link">Não tem conta ainda? Cadastre-se</string>
    <string name="forget_password">Esqueceu a senha?</string>
    <string name="signIn">Logar</string>
    <string name="success_password">Senha salva com sucesso!</string>
    <string name="error_email_or_pass_wrong">Email ou senha invalidos!</string>
    <string name="error_email_without_password">Login sem senha cadastrada! Cadastre uma senha para esse login!</string>
    <string name="error_email">Esse email não está cadastrado para essa aplicação! Tente outro email!</string>

    <string name="error_api">Não foi possível realizar a requisição</string>

    <string name="developer_for">DESENVOLVIDO POR ARTHUR SALES \n Para o Itaú</string>
</resources>
