<?xml version="1.0" encoding="utf-8"?>
            <androidx.constraintlayout.widget.ConstraintLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorEditTextDefault"
                    android:padding="0dp">

    <TextView
            android:textSize="22sp"
            android:textColor="#000000"
            android:gravity="center"
            android:textStyle="normal"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/what_is_your_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvLoginQuestion" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:boxBackgroundColor="@color/colorEditTextDefault"
                        android:id="@+id/tilEmail"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintTop_toBottomOf="@id/tvLoginQuestion">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:id="@+id/edtEmail"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:hint="@string/hint_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                    />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:id="@+id/tilPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:boxBackgroundColor="@color/colorEditTextDefault"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
                        android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent">
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:hint="@string/hint_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                        android:text="@string/forgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/forgetPassword"
                        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
                        app:layout_constraintEnd_toEndOf="@+id/tilPassword"/>

                <Button
                        android:text="@string/signIn"
                        android:background="@drawable/background_button"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorTextSecundary"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnLogar"
                        android:enabled="false"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/forgetPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
