<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/include_loading"/>
    <ScrollView
        android:layout_width="match_parent"
        android:background="@drawable/background_trainner3"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:textSize="22sp"
                android:textColor="#FFEB3B"
                android:gravity="center"
                android:textStyle="bold"
                android:fontFamily="@font/pokemon_solid"
                android:text="@string/form_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitle" android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"/>
        <TextView
                android:text="@string/label_name"
                android:textColor="#FFF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                app:layout_constraintTop_toTopOf="@+id/ivPokemonForm"
                app:layout_constraintEnd_toStartOf="@+id/ivPokemonForm"
                android:layout_marginEnd="8dp"/>
        <TextView
                tools:text="Charizard"
                android:textStyle="bold"
                android:textSize="26sp"
                android:textColor="#FFF"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvPokemonNameForm"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/textView6"/>

        <Button
                tools:text="@string/label_first_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvFirstType"
                app:layout_constraintStart_toStartOf="@+id/tvTitle"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvPokemonNameForm"/>
        <Button
                tools:text="@string/label_second_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvSecondType"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/tvFirstType" android:layout_marginStart="4dp"
                app:layout_constraintTop_toTopOf="@+id/tvFirstType"
                app:layout_constraintBottom_toBottomOf="@+id/tvFirstType"/>

        <ImageView
                android:padding="8dp"
                android:background="@drawable/background_pokemon_details"
                android:layout_width="@dimen/img_default_pokemon_details"
                android:layout_height="@dimen/img_default_pokemon_details"
                app:srcCompat="@drawable/charizard"
                android:id="@+id/ivPokemonForm"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/tvTitle"/>

        <View android:layout_width="0dp" android:layout_height="50dp"
              android:background="#FFEB3B"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:id="@+id/view_yellow_line"
              app:layout_constraintHorizontal_bias="0.0"
              app:layout_constraintTop_toBottomOf="@id/tvFirstType"
              android:layout_marginTop="12dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/view_yellow_line">
            <!--HP-->
            <ImageView
                    android:id="@+id/ivHP"
                    style="@style/form_label_icon"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_ps" />

            <TextView
                    android:id="@+id/tvHP"
                    style="@style/form_label_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/label_hp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivHP"
                    app:layout_constraintStart_toEndOf="@+id/ivHP"
                    app:layout_constraintTop_toTopOf="@+id/ivHP" />

            <TextView
                    android:id="@+id/tvHPValue"
                    style="@style/form_label_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvHP"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvHP"
                    tools:text="78" />

            <SeekBar
                    android:id="@+id/sbHP"
                    style="@style/form_seekbar_HP"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/tvHPValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvHP" />

            <!--Attack-->
            <TextView
                    android:id="@+id/tvAttack"
                    style="@style/form_label_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/label_attack"
                    app:layout_constraintBottom_toBottomOf="@+id/imgAttack"
                    app:layout_constraintStart_toEndOf="@+id/imgAttack"
                    app:layout_constraintTop_toTopOf="@+id/imgAttack" />

            <SeekBar
                    android:id="@+id/sbAttack"
                    style="@style/form_seekbar_ATK"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/tvAttackValue"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAttack" />

            <TextView
                    android:id="@+id/tvAttackValue"
                    style="@style/form_label_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/tvAttack"
                    app:layout_constraintEnd_toEndOf="@+id/tvHPValue"
                    app:layout_constraintTop_toTopOf="@+id/tvAttack"
                    tools:text="84" />

            <ImageView
                    android:id="@+id/imgAttack"
                    style="@style/form_label_icon"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/ivHP"
                    app:layout_constraintTop_toBottomOf="@+id/sbHP"
                    app:srcCompat="@drawable/ic_attack" />


            <!--Defense-->
            <TextView
                    android:id="@+id/tvDefense"
                    style="@style/form_label_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/label_defense"
                    app:layout_constraintBottom_toBottomOf="@+id/imgDefense"
                    app:layout_constraintStart_toEndOf="@+id/imgDefense"
                    app:layout_constraintTop_toTopOf="@+id/imgDefense" />

            <SeekBar
                    android:id="@+id/sbDefense"
                    style="@style/form_seekbar_DEF"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/tvDefenseValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDefense" />

            <TextView
                    android:id="@+id/tvDefenseValue"
                    style="@style/form_label_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/tvDefense"
                    app:layout_constraintEnd_toEndOf="@+id/tvAttackValue"
                    app:layout_constraintTop_toTopOf="@+id/tvDefense"
                    tools:text="78" />

            <ImageView
                    android:id="@+id/imgDefense"
                    style="@style/form_label_icon"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/imgAttack"
                    app:layout_constraintTop_toBottomOf="@+id/sbAttack"
                    app:srcCompat="@drawable/ic_defense" />

            <!--Sp.Attack-->
            <TextView
                    android:id="@+id/tvSPAttack"
                    style="@style/form_label_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/label_sp_attack"
                    app:layout_constraintBottom_toBottomOf="@+id/imgSPAttack"
                    app:layout_constraintStart_toStartOf="@+id/tvDefense"
                    app:layout_constraintTop_toTopOf="@+id/imgSPAttack" />

            <SeekBar
                    android:id="@+id/sbSPAttack"
                    style="@style/form_seekbar_ATK"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/tvSPAttackValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSPAttack" />

            <TextView
                    android:id="@+id/tvSPAttackValue"
                    style="@style/form_label_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/tvSPAttack"
                    app:layout_constraintEnd_toEndOf="@+id/tvDefenseValue"
                    app:layout_constraintTop_toTopOf="@+id/tvSPAttack"
                    tools:text="109" />

            <ImageView
                    android:id="@+id/imgSPAttack"
                    style="@style/form_label_icon"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/imgDefense"
                    app:layout_constraintTop_toBottomOf="@+id/sbDefense"
                    app:srcCompat="@drawable/ic_attack" />

            <!--Sp.Defense-->
            <ImageView
                    android:id="@+id/imgSPDefense"
                    style="@style/form_label_icon"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/imgSPAttack"
                    app:layout_constraintTop_toBottomOf="@+id/sbSPAttack"
                    app:srcCompat="@drawable/ic_defense" />

            <TextView
                    android:id="@+id/tvSPDefense"
                    style="@style/form_label_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/label_sp_defense"
                    app:layout_constraintBottom_toBottomOf="@+id/imgSPDefense"
                    app:layout_constraintStart_toEndOf="@+id/imgSPDefense"
                    app:layout_constraintTop_toTopOf="@+id/imgSPDefense" />

            <SeekBar
                    android:id="@+id/sbSPDefense"
                    style="@style/form_seekbar_DEF"
                    android:layout_height="18dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/tvSPDefenseValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSPDefense" />

            <TextView
                    android:id="@+id/tvSPDefenseValue"
                    style="@style/form_label_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/tvSPDefense"
                    app:layout_constraintEnd_toEndOf="@+id/tvDefenseValue"
                    app:layout_constraintTop_toTopOf="@+id/tvSPDefense"
                    tools:text="85" />

            <!--Speed-->
            <ImageView
                    android:id="@+id/imgSpeed"
                    style="@style/form_label_icon"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/imgSPDefense"
                    app:layout_constraintTop_toBottomOf="@+id/sbSPDefense"
                    app:srcCompat="@drawable/ic_velocity" />

            <TextView
                    android:id="@+id/tvSpeed"
                    style="@style/form_label_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/label_speed"
                    app:layout_constraintBottom_toBottomOf="@+id/imgSpeed"
                    app:layout_constraintStart_toStartOf="@+id/tvDefense"
                    app:layout_constraintTop_toTopOf="@+id/imgSpeed" />

            <SeekBar
                    android:id="@+id/sbSpeed"
                    style="@style/form_seekbar_ATK"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/tvSpeedValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSpeed" />

            <TextView
                    android:id="@+id/tvSpeedValue"
                    style="@style/form_label_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/tvSpeed"
                    app:layout_constraintEnd_toEndOf="@+id/tvDefenseValue"
                    app:layout_constraintTop_toTopOf="@+id/tvSpeed"
                    tools:text="100" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_favorite_border"
                android:id="@+id/btSaveFavorite"
                app:layout_constraintTop_toTopOf="@+id/tvTitle"
                app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
                app:layout_constraintEnd_toEndOf="@+id/ivPokemonForm"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</LinearLayout>